add html second block

--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,39 @@
           </div>
         </div>
       </section>
-      <section class="properties"></section>
+      <section class="properties">
+        <div class="properties__title">The Unique properties of our 1TCA mask</div>
+        <div class="properties__text">
+          British public is required to wear a face mask when on trains, in shops and any enclosed space, 1TcA has
+          launched the first.
+        </div>
+        <div class="properties__inner">
+          <div class="propertie__card">
+            <div class="propertie__icon"></div>
+            <div class="propertie__title">Effective</div>
+            <div class="propertie__text">
+              HeiQ viroblock works to deactivate. the virus with minutes and effective for 30 washes.
+            </div>
+            <div class="propertie__link">Learn More -></div>
+          </div>
+          <div class="propertie__card">
+            <div class="propertie__icon"></div>
+            <div class="propertie__title">Effective</div>
+            <div class="propertie__text">
+              HeiQ viroblock works to deactivate. the virus with minutes and effective for 30 washes.
+            </div>
+            <div class="propertie__link">Learn More -></div>
+          </div>
+          <div class="propertie__card">
+            <div class="propertie__icon"></div>
+            <div class="propertie__title">Effective</div>
+            <div class="propertie__text">
+              HeiQ viroblock works to deactivate. the virus with minutes and effective for 30 washes.
+            </div>
+            <div class="propertie__link">Learn More -></div>
+          </div>
+        </div>
+      </section>
     </main>
     <script src="js/main.min.js"></script>
   </body>
