фикс стилизации кнопки и переименовал info.scss

--- a/public/index.html
+++ b/public/index.html
@@ -44,15 +44,15 @@
               Textiles are one of the main vectors for viruses and bacteria. Textiles treat with HeiQ viroblock help
               stop cross- contamination from surface to face covering.
             </div>
-            <button class="info__button bg-blue">SHOP NOW</button>
+            <button class="info__button info__button--blue">SHOP NOW</button>
             <button class="info__button">LEARN MORE</button>
           </div>
-          <img class="info_img" src="img/person_main.png" />
+          <img class="info__img" src="img/person_main.png" />
           <div class="info__social">
-            <img src="img/icons/facebook.png" alt="" class="info__facebook" />
-            <img src="img/icons/youtube.png" alt="" class="info__youtube" />
-            <img src="img/icons/linkedin.png" alt="" class="info__linkedin" />
-            <img src="img/icons/instagram.png" alt="" class="info__instagram" />
+            <img class="info__facebook" src="img/icons/facebook.png" alt="" />
+            <img class="info__youtube" src="img/icons/youtube.png" alt="" />
+            <img class="info__linkedin" src="img/icons/linkedin.png" alt="" />
+            <img class="info__instagram" src="img/icons/instagram.png" alt="" />
           </div>
         </div>
       </section>
