--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
           </div>
           <div class="propertie__card">
             <div class="propertie__icon"></div>
-            <div class="propertie__title">Effective</div>
+            <div class="propertie__title">Recyclable</div>
             <div class="propertie__text">
               HeiQ viroblock works to deactivate. the virus with minutes and effective for 30 washes.
             </div>
@@ -81,7 +81,7 @@
           </div>
           <div class="propertie__card">
             <div class="propertie__icon"></div>
-            <div class="propertie__title">Effective</div>
+            <div class="propertie__title">Practical</div>
             <div class="propertie__text">
               HeiQ viroblock works to deactivate. the virus with minutes and effective for 30 washes.
             </div>
@@ -89,7 +89,146 @@
           </div>
         </div>
       </section>
+      <section class="heiq">
+        <div class="heiq__inner">
+          <div class="heiq__block-images">
+            <img class="heiq__image--home" src="img/heiq/main.png" />
+            <img class="heiq__image--secondary" src="img/heiq/secondary.png" />
+          </div>
+          <div class="heiq__block-text">
+            <div class="heiq__enhanced">Enhanced with HeiQ Viroblock</div>
+            <div class="heiq__title">The UK’s First Fully Recyclable & Sustainable Face Mask</div>
+            <div class="heiq__text">
+              At a time when the British public is required to wear a face mask when on trains, in shops and any
+              enclosed space, 1TcA has launched the first British made reusable, sustainable face masks and snoods,
+              manufactured using GRS fabric, woven from recycled waste plastic and treated.
+            </div>
+            <div class="heiq__link">Learn More -></div>
+          </div>
+        </div>
+      </section>
+      <section class="projects">
+        <div class="projects__inner">
+          <div class="projects__card">
+            <img class="projects__image" src="img/projects/family.png" alt="" />
+            <div class="projects__title">Protect your family</div>
+            <div class="projects__text">Purchase our family packs of masks online</div>
+            <button class="projects__button">Shop Now</button>
+          </div>
+          <div class="projects__card">
+            <img class="projects__image" src="img/projects/public.png" alt="" />
+            <div class="projects__title">Protect The Public</div>
+            <div class="projects__text">Purchase our family packs of masks online</div>
+            <button class="projects__button">Shop Now</button>
+          </div>
+          <div class="projects__card">
+            <img class="projects__image" src="img/projects/employess.png" alt="" />
+            <div class="projects__title">Protect Your Employess</div>
+            <div class="projects__text">Purchase our family packs of masks online</div>
+            <button class="projects__button">Shop Now</button>
+          </div>
+        </div>
+      </section>
+      <section class="reasons">
+        <div class="reasons__inner">
+          <div class="reasons__block-text">
+            <div class="reasons__title">5 Reasons to use 1TcA Masks</div>
+            <ul class="reasons__points">
+              <li class="reasons__point">Enhanced with HeiQ Viroblock</li>
+              <li class="reasons__point">Reduces cross contamination from hand to face covering</li>
+              <li class="reasons__point">Sustanable – protecting you and your planet</li>
+              <li class="reasons__point">British Manufacturing – helping the economy</li>
+              <li class="reasons__point">Cost-effective with all profits donated to our chosen charities</li>
+            </ul>
+          </div>
+          <div class="reasons__block-images">
+            <img class="reasons__image--doctor" src="img/reasons/doctor.png" alt="" />
+            <img class="reasons__image--seal" src="img/reasons/seal.png" alt="" />
+          </div>
+        </div>
+      </section>
+      <section class="about">
+        <div class="about__title">What our client say about us</div>
+        <div class="about__text">
+          British public is required to wear a face mask when on trains, in shops and any enclosed space, 1TcA has
+          launched the first.
+        </div>
+        <div class="about__inner">
+          <div class="about__slider-comments">
+            <div class="about__card">
+              <div class="about__comment">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Auctor neque sed imperdiet nibh lectus feugiat
+                nunc sem. when an unknown printer took a galley.
+              </div>
+              <img class="about__avatar" src="img/about/avatar.png" />
+              <div class="about__name">Jane Cooper</div>
+              <div class="about__profession">CEO at Design Space</div>
+            </div>
+            <div class="about__card">
+              <div class="about__comment">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Auctor neque sed imperdiet nibh lectus feugiat
+                nunc sem. when an unknown printer took a galley.
+              </div>
+              <img class="about__avatar" src="img/about/avatar.png" />
+              <div class="about__name">Jane Cooper</div>
+              <div class="about__profession">CTO at Google Maps</div>
+            </div>
+            <div class="about__card">
+              <div class="about__comment">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Auctor neque sed imperdiet nibh lectus feugiat
+                nunc sem. when an unknown printer took a galley.
+              </div>
+              <img class="about__avatar" src="img/about/avatar.png" />
+              <div class="about__name">Jane Cooper</div>
+              <div class="about__profession">CEO at ABC Corporation</div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="signboard bg-blue">
+        <div class="signboard__title">All 1TCA profits are donated to charitable Causes and community projects</div>
+        <button class="signboard__button">Shop Now</button>
+      </section>
     </main>
+    <footer class="footer">
+      <div class="footer__inner">
+        <ul class="footer__items">
+          <img class="footer__icon" src="img/footer/icon.png" />
+          <li class="footer__text">
+            Textiles are one of the main vectors for viruses and bacteria. Textiles treat with HeiQ viroblock.
+          </li>
+          <li class="footer__social">
+            <img class="footer__facebook" src="img/footer/facebook.png" alt="" />
+            <img class="footer__youtube" src="img/footer/youtube.png" alt="" />
+            <img class="footer__linkedin" src="img/footer/linkedin.png" alt="" />
+            <img class="footer__instagram" src="img/footer/instagram.png" alt="" />
+          </li>
+        </ul>
+        <ul class="footer__items">
+          <li class="footer__title">Navigation</li>
+          <li class="footer__link">Shop</li>
+          <li class="footer__link">About Us</li>
+          <li class="footer__link">Contact US</li>
+          <li class="footer__link">Privacy Policy</li>
+          <li class="footer__link">Cart</li>
+          <li class="footer__link">Terms And Conditions​</li>
+          <li class="footer__link">Recyclable</li>
+        </ul>
+        <ul class="footer__items">
+          <li class="footer__title">Company Details</li>
+          <li class="footer__link">020 7520 9260</li>
+          <li class="footer__link">Contact@1tca.com</li>
+          <li class="footer__link">Adam House, 7 – 10 Adams Street, The Strand, London WC2N 6AA</li>
+        </ul>
+        <ul class="footer__items">
+          <li class="footer__title">Our Partner</li>
+          <li class="footer__link">HeiQ</li>
+          <li class="footer__link">Project Plan B</li>
+          <img class="footer__seal" src="img/footer/seal.png" alt="" />
+        </ul>
+      </div>
+      <div class="footer__privacy">©2020 1TCA | PRIVACY POLICY | Disclaimer</div>
+    </footer>
     <script src="js/main.min.js"></script>
   </body>
 </html>
