--- a/public/index.html
+++ b/public/index.html
@@ -162,7 +162,7 @@
           British public is required to wear a face mask when on trains, in shops and any enclosed space, 1TcA has
           launched the first.
         </div>
-        <div class="about__inner">
+        <div class="about__inner container">
           <div class="about__slider-comments">
             <div class="about__card">
               <div class="about__comment">
