--- a/public/index.html
+++ b/public/index.html
@@ -55,12 +55,12 @@
             <button class="info__button info__button--blue">SHOP NOW</button>
             <button class="info__button">LEARN MORE</button>
           </div>
-          <img class="info__img" src="img/person_main.png" />
+          <div class="info__img" /></div>
           <div class="info__social">
-            <img class="info__facebook" src="img/icons/facebook.png" alt="" />
-            <img class="info__youtube" src="img/icons/youtube.png" alt="" />
-            <img class="info__linkedin" src="img/icons/linkedin.png" alt="" />
-            <img class="info__instagram" src="img/icons/instagram.png" alt="" />
+            <img class="info__facebook" src="img/info/icons/facebook.png" alt="" />
+            <img class="info__youtube" src="img/info/icons/youtube.png" alt="" />
+            <img class="info__linkedin" src="img/info/icons/linkedin.png" alt="" />
+            <img class="info__instagram" src="img/info/icons/instagram.png" alt="" />
           </div>
         </div>
       </section>
@@ -248,7 +248,7 @@
           </div>
         </div>
       </section>
-      <section class="signboard bg-blue">
+      <section class="signboard">
         <div class="signboard__title">All 1TCA profits are donated to charitable Causes and community projects</div>
         <button class="signboard__button">Shop Now ➜</button>
         <img class="signboard__rectangle--left" src="img/signboard/rectangle__left.png" alt="" />
