changes in card, little fixes in footer

--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,7 @@
           enclosed space, 1TcA has launched the first.
         </div>
         <div class="properties__inner">
-          <div class="card">
+          <div class="card properties__card">
             <div class="card__icon"></div>
             <div class="card__title">Effective</div>
             <div class="card__text">
@@ -78,7 +78,7 @@
             </div>
             <div class="card__link">Learn More ➜</div>
           </div>
-          <div class="card">
+          <div class="card properties__card card--blue">
             <div class="card__icon"></div>
             <div class="card__title">Recyclable</div>
             <div class="card__text">
@@ -86,7 +86,7 @@
             </div>
             <div class="card__link">Learn More ➜</div>
           </div>
-          <div class="card">
+          <div class="card properties__card">
             <div class="card__icon"></div>
             <div class="card__title">Practical</div>
             <div class="card__text">
@@ -251,8 +251,10 @@
         </div>
       </section>
       <section class="signboard">
-        <div class="signboard__title">All 1TCA profits are donated to charitable Causes and community projects</div>
-        <button class="signboard__button">Shop Now ➜</button>
+        <div class="signboard__inner container">
+          <div class="signboard__title">All 1TCA profits are donated to charitable Causes and community projects</div>
+          <button class="signboard__button">Shop Now ➜</button>
+        </div>
       </section>
     </main>
     <footer class="footer">
